# Server5K

./: .env.development.example  .env.production.example  .gitignore  CAMBIOS_VALIDACION.md  README.md  credenciales_jueces.txt  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start_server_lan.ps1  test_carga_50_jueces.py  test_registro_batch.html  test_validacion_competencia.html
.github/workflows/: main_appatletismo.yml
app/: admin.py  consumers.py  models.py  serializers.py  signals.py  ui_urls.py  urls.py  views.py
app/config/: ui_urls.py  urls.py
app/management/commands/: populate_data.py  unl5k_2025.py
app/migrations/: 0002_registrotiempo_competencia.py  0003_asignar_competencia_registros.py  0004_alter_registrotiempo_competencia.py
app/models/: equipo.py
app/services/: registro_service.py
app/views/: __init__.py  auth_views.py  html_views.py  registro_views.py
app/websocket/: consumers.py  validators.py
docs/: VALIDACION_COMPETENCIA.md
mensajeria/: mqtt_client.py
server/: settings.py  urls.py
templates/: base.html
templates/app/: competencia_detail.html  competencia_list.html  equipo_detail.html
templates/app/partials/: competencia_results.html
